; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/extr_main.c_ar_open_any_archive.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/extr_main.c_ar_open_any_archive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c".xps\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c".epub\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ar_open_any_archive(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @ar_open_rar_archive(i32* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %28, label %10

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %24

14:                                               ; preds = %10
  %15 = load i8*, i8** %4, align 8
  %16 = call i64 @strcmp(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %14
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 @strcmp(i8* %19, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %21 = icmp eq i64 %20, 0
  br label %22

22:                                               ; preds = %18, %14
  %23 = phi i1 [ true, %14 ], [ %21, %18 ]
  br label %24

24:                                               ; preds = %22, %10
  %25 = phi i1 [ false, %10 ], [ %23, %22 ]
  %26 = zext i1 %25 to i32
  %27 = call i32* @ar_open_zip_archive(i32* %11, i32 %26)
  store i32* %27, i32** %5, align 8
  br label %28

28:                                               ; preds = %24, %2
  %29 = load i32*, i32** %5, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %34, label %31

31:                                               ; preds = %28
  %32 = load i32*, i32** %3, align 8
  %33 = call i32* @ar_open_7z_archive(i32* %32)
  store i32* %33, i32** %5, align 8
  br label %34

34:                                               ; preds = %31, %28
  %35 = load i32*, i32** %5, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %40, label %37

37:                                               ; preds = %34
  %38 = load i32*, i32** %3, align 8
  %39 = call i32* @ar_open_tar_archive(i32* %38)
  store i32* %39, i32** %5, align 8
  br label %40

40:                                               ; preds = %37, %34
  %41 = load i32*, i32** %5, align 8
  ret i32* %41
}

declare dso_local i32* @ar_open_rar_archive(i32*) #1

declare dso_local i32* @ar_open_zip_archive(i32*, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32* @ar_open_7z_archive(i32*) #1

declare dso_local i32* @ar_open_tar_archive(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
